2007-05-20  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gnome_sudoku.py: Set default icon for all windows (Bug #393250)

2007-05-15  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gnome_sudoku.py: 
	* help/C/gnome-sudoku.xml: Make the main menu consistent
	with the rest of gnome-games.Rename  "Game" -> "Tools" 
	and  "File" -> "Game" Patch from Thomas Andersen in Bug #408440.

2007-05-15  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gnome_sudoku.py: Use Ctrl-H for hint. Patch from
	Thomas Andersen in Bug #420325.

2007-05-04  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gsudoku.py: Make fill remove red color when it corrects a 
	mistake. The patch makes "fill" use the same code for changing a 
	number as when done manually. Patch from Thomas Andersen 
	in Bug #393253. 

2007-05-01  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/sudoku_generator_gui.py: Fix a i18n related crash,
	by strong the number of generated puzzles in a variable,
	instead of extracting it from the label. This solves Bug #428560.

2007-05-01  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/sudoku_maker.py: Fix a race condition which occurs
	when saving puzzles on exit. The solution is to run the pickle
	operation atomically. This solves Bug #409172 et al.

2007-04-22  Robert Ancell <robert.ancell@gmail.com>

	* src/lib/gnome_sudoku.py Catch exceptions when launching help (Bug #418193)

2007-04-01  Robert Ancell <robert.ancell@gmail.com>

	* src/lib/game_selector.py Sort game name columns numerically (Bug #417191)

2007-03-31  Robert Ancell <robert.ancell@gmail.com>

	* src/lib/game_selector.py Make sure one game is always selected for restoring (Bug #422748)
	* src/lib/gnome_sudoku.py Remember window size when quitting (Bug #380780)

2007-03-25  Robert Ancell <robert.ancell@gmail.com>

	* Use string substitution using dictionary lookups when using ngettext to stop
	  substitution exceptions (Bug #409739)