@@ -1,4 +1,5 @@
 import os, os.path
+import errno
 import gettext
 
 APP_DATA_DIR = os.path.join('@prefix@', 'share') 
@@ -41,5 +42,8 @@ _("You should have received a copy of the GNU General Public License "
 DATA_DIR = os.path.expanduser('~/.gnome2/gnome-sudoku/')
 
 def initialize_games_dir ():
-    if not os.path.exists(DATA_DIR): os.makedirs(DATA_DIR)
-
+    try:
+        os.makedirs(DATA_DIR)
+    except OSError, e:
+        if e.errno != errno.EEXIST:
+            print _('Unable to make data directory %(dir)s: %(error)s') % {'dir': DATA_DIR, 'error': e.strerror}
