@@ -1,6 +1,7 @@
 2007-05-20  Robert Ancell  <robert.ancell@gmail.com>
 
 	* src/lib/gnome_sudoku.py: Set default icon for all windows (Bug #393250)
+	* src/lib/defaults.py.in: Catch exceptions making data directory
 
 2007-05-15  Andreas Røsdal  <andreasr@gnome.org>
 
